infrastructure.yml
---
AWSTemplateFormatVersion: "2010-09-09"

Description:
  Configures infrastructure for bitwarden_rs

Parameters:
  Application:
    Type: String
    Description: Application name e.g. bwrs.
  Environment:
    Type: String
    Description: Environment name e.g. prod, dev.
  VPCID:
    Type: AWS::EC2::VPC::Id
    Description: VPC to deploy into.
  SubnetIDs:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Subnets to deploy into.
  AllowedTrafficCidrIp:
    Type: String
    Description: Allow traffic from IP/Cidr e.g. 1.123.123.3/32.

Conditions:
  # Messy way of checking if subnets exist
  # Use something like CDK to create dynamic resources based on list length
  HasSubnet0: !Not [ !Equals [ !Select [ "0", !Ref SubnetIDs ], "" ] ]
  HasSubnet1: !Not [ !Equals [ !Select [ "1", !Ref SubnetIDs ], "" ] ]
  HasSubnet2: !Not [ !Equals [ !Select [ "2", !Ref SubnetIDs ], "" ] ]

Resources:
  #
  # Security Groups
  #
  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'bwrs container sg'
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref AWS::StackName, 'container', 'sg' ] ]
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'bwrs lb sg'
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref AllowedTrafficCidrIp
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref AWS::StackName, 'lb', 'sg' ] ]
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application

  EfsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Instance to EFS Mount Access
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 2049
          SourceSecurityGroupId: !Ref ContainerSecurityGroup
          ToPort: 2049
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref AWS::StackName, 'efs', 'sg' ] ]
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application


  #
  # Certificates
  #
  HTTPSCertificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      ValidationMethod: DNS
      DomainName:
        !Join
          - '.'
          - - !Ref Application
            - !Sub
              - "{{resolve:ssm:/dwlab/${Environment}/root-domain-name:1}}"
              - { Environment: !Ref Environment }
      DomainValidationOptions:
        - DomainName: !Join
          - '.'
          - - !Ref Application
            - !Sub
              - "{{resolve:ssm:/dwlab/${Environment}/root-domain-name:1}}"
              - { Environment: !Ref Environment }
          HostedZoneId: !Sub
            - "{{resolve:ssm:/dwlab/${Environment}/root-domain-hosted-zone-id:2}}"
            - { Environment: !Ref Environment }


  #
  # IAM roles
  #
  ExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'


  #
  # Logs
  #
  CloudWatchLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Join [ '-', [ !Ref AWS::StackName, 'logs' ] ]
      RetentionInDays: 30


  #
  # Container compute (ECS Fargate)
  #
  ECSCluster:
    Type: 'AWS::ECS::Cluster'
    Properties:
      ClusterName:
        !Join
          - '-'
          - - !Ref Application
            - !Ref Environment
      CapacityProviders:
        - FARGATE
      DefaultCapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1
      ClusterSettings:
        - Name: containerInsights
          Value: disabled
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application

  ECSTaskDefinition: 
    Type: AWS::ECS::TaskDefinition
    Properties: 
      Cpu: "256"
      Memory: "512"
      RequiresCompatibilities:
        - "FARGATE"
      ExecutionRoleArn: !GetAtt ExecutionRole.Arn # Needed for awslogs
      ContainerDefinitions: 
        - Name: !Ref Application
          Image: "bitwardenrs/server:1.19.0"
          Essential: true
          PortMappings:
            - ContainerPort: 80
          MountPoints: 
          - SourceVolume: "bwrs-data"
            ContainerPath: "/data"
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref CloudWatchLogsGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: !Ref AWS::StackName
      NetworkMode: awsvpc
      Volumes: 
        - Name: "bwrs-data"
          EFSVolumeConfiguration:
            FilesystemId: !Ref FileSystemResource
            TransitEncryption: 'ENABLED'
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application

  ECSService: 
    Type: AWS::ECS::Service
    DependsOn:
      - ListenerHTTPS
    Properties:
      Cluster: 
        Ref: ECSCluster
      DesiredCount: 0
      TaskDefinition:
        Ref: ECSTaskDefinition
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED # Required to pull from Docker Hub
          Subnets: !Ref SubnetIDs
          SecurityGroups:
            - !Ref ContainerSecurityGroup
      LoadBalancers:
        - ContainerName: bwrs
          ContainerPort: 80
          TargetGroupArn: !Ref TargetGroup
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application


  #
  # Container storage (EFS)
  #
  FileSystemResource:
    Type: 'AWS::EFS::FileSystem'
    Properties:
      PerformanceMode: generalPurpose
      Encrypted: true
      FileSystemTags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application

  MountTarget0:
    Type: AWS::EFS::MountTarget
    Condition: HasSubnet0
    Properties:
      FileSystemId: !Ref FileSystemResource
      SubnetId: !Select [ "0", !Ref SubnetIDs ]
      SecurityGroups:
        - !Ref EfsSecurityGroup

  MountTarget1:
    Type: AWS::EFS::MountTarget
    Condition: HasSubnet1
    Properties:
      FileSystemId: !Ref FileSystemResource
      SubnetId: !Select [ "1", !Ref SubnetIDs ]
      SecurityGroups:
        - !Ref EfsSecurityGroup

  MountTarget2:
    Type: AWS::EFS::MountTarget
    Condition: HasSubnet2
    Properties:
      FileSystemId: !Ref FileSystemResource
      SubnetId: !Select [ "2", !Ref SubnetIDs ]
      SecurityGroups:
        - !Ref EfsSecurityGroup


  #
  # Load balancing
  #
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: '/alive'
      HealthCheckTimeoutSeconds: 5
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VPCID
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application

  ListenerHTTPS:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref TargetGroup
          Type: forward
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: bwrs-lb
      Scheme: internet-facing
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Subnets: !Ref SubnetIDs
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref Application
